; ModuleID = '/home/carl/AnghaBench/vlc/modules/mux/extr_extradata.c_ac3_extradata_builder_Feed.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/mux/extr_extradata.c_ac3_extradata_builder_Feed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.vlc_a52_bitstream_info = type { i32, i32, i32, i32, i32, i32 }

@VLC_A52_MIN_HEADER_SIZE = common dso_local global i64 0, align 8
@VLC_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i64)* @ac3_extradata_builder_Feed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ac3_extradata_builder_Feed(%struct.TYPE_3__* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.vlc_a52_bitstream_info, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %27, label %13

13:                                               ; preds = %3
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @VLC_A52_MIN_HEADER_SIZE, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %27, label %17

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 11
  br i1 %21, label %27, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %5, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 1
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 119
  br i1 %26, label %27, label %28

27:                                               ; preds = %22, %17, %13, %3
  br label %76

28:                                               ; preds = %22
  %29 = load i32*, i32** %5, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 4
  %31 = load i64, i64* @VLC_A52_MIN_HEADER_SIZE, align 8
  %32 = sub i64 %31, 4
  %33 = call i64 @vlc_a52_ParseAc3BitstreamInfo(%struct.vlc_a52_bitstream_info* %7, i32* %30, i64 %32)
  %34 = load i64, i64* @VLC_SUCCESS, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  br label %76

37:                                               ; preds = %28
  %38 = call i32 @malloc(i32 3)
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  store i32 %38, i32* %40, align 4
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %46, label %45

45:                                               ; preds = %37
  br label %76

46:                                               ; preds = %37
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  store i32 3, i32* %48, align 4
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @bs_write_init(i32* %8, i32 %51, i32 %54)
  %56 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @bs_write(i32* %8, i32 2, i32 %57)
  %59 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 1
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @bs_write(i32* %8, i32 5, i32 %60)
  %62 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 2
  %63 = load i32, i32* %62, align 4
  %64 = call i32 @bs_write(i32* %8, i32 3, i32 %63)
  %65 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 3
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @bs_write(i32* %8, i32 3, i32 %66)
  %68 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 4
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @bs_write(i32* %8, i32 1, i32 %69)
  %71 = getelementptr inbounds %struct.vlc_a52_bitstream_info, %struct.vlc_a52_bitstream_info* %7, i32 0, i32 5
  %72 = load i32, i32* %71, align 4
  %73 = ashr i32 %72, 1
  %74 = call i32 @bs_write(i32* %8, i32 5, i32 %73)
  %75 = call i32 @bs_write(i32* %8, i32 5, i32 0)
  br label %76

76:                                               ; preds = %46, %45, %36, %27
  ret void
}

declare dso_local i64 @vlc_a52_ParseAc3BitstreamInfo(%struct.vlc_a52_bitstream_info*, i32*, i64) #1

declare dso_local i32 @malloc(i32) #1

declare dso_local i32 @bs_write_init(i32*, i32, i32) #1

declare dso_local i32 @bs_write(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
